<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:padding="10dp"
      android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Iniciarsesion"
        android:fontFamily="@font/robotobold"
        android:textSize="25dp"
        android:padding="20dp"
        android:gravity="center"/>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:id="@+id/correol"
          android:hint="@string/Correol"
          android:drawableStart="@drawable/icon_correo"
          android:drawablePadding="10dp"
          android:fontFamily="@font/robotobold"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="true">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:id="@+id/contrasenaL"
          android:padding="20dp"
          android:hint="@string/contrasenaL"
          android:drawableStart="@drawable/icon_password"
          android:drawablePadding="10dp"
          android:fontFamily="@font/robotobold"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:id="@+id/Btn_login"
        android:text="@string/Btn_login"
        android:fontFamily="@font/robotobold"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_nuevo"
        android:text="@string/Btn_nuevo"
        android:fontFamily="@font/robotobold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />


  </androidx.appcompat.widget.LinearLayoutCompat>

  </RelativeLayout>