<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuprincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/ColorPrimary"
            android:padding="0.2dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BienvenidoPrincipal"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/robotobold"
                    />

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ProgressBar"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/nombresprincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/nombresprincipal"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/robotobold"
                    />

                <TextView
                    android:id="@+id/correoprincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/correoprincipal"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/robotobold"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/cerrarsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrarsesion" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>