<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/CrearCuenta"
            android:fontFamily="@font/robotobold"
            android:textSize="25dp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registre.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NombreR"
                android:hint="@string/NombreR"
                android:drawableStart="@drawable/icon_nombre"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:fontFamily="@font/robotobold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CorreoR"
                android:hint="@string/CorreoR"
                android:drawableStart="@drawable/icon_correo"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:fontFamily="@font/robotobold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contrasenaR"
                android:hint="@string/contrasenaR"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:fontFamily="@font/robotobold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConfirmarContraseñaR"
                android:hint="@string/ConfirmarContraseñaR"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:fontFamily="@font/robotobold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:id="@+id/RegistrarR"
            android:text="@string/RegistrarR"
            android:fontFamily="@font/robotobold"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TengounaCuentaTxt"
            android:text="@string/TengounaCuentaTxt"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>